@@ -46,7 +46,7 @@ Trino supports [reproducible builds](https://reproducible-builds.org) as of vers
   * Note that some npm packages used to build the web UI are only available
     for x86 architectures, so if you're building on Apple Silicon, you need 
     to have Rosetta 2 installed
-* Java 24.0.1+, 64-bit
+* Java 25.0.1+, 64-bit
 * Docker
   * Turn SELinux or other systems disabling write access to the local checkout
     off, to allow containers to mount parts of the Trino source tree
@@ -82,8 +82,8 @@ After opening the project in IntelliJ, double check that the Java SDK is
 properly configured for the project:
 
 * Open the File menu and select Project Structure
-* In the SDKs section, ensure that JDK 24 is selected (create one if none exist)
-* In the Project section, ensure the Project language level is set to 24
+* In the SDKs section, ensure that JDK 25 is selected (create one if none exist)
+* In the Project section, ensure the Project language level is set to 25
 
 ### Running a testing server
 
@@ -91,7 +91,17 @@ The simplest way to run Trino for development is to run the `TpchQueryRunner`
 class. It will start a development version of the server that is configured with
 the TPCH connector. You can then use the CLI to execute queries against this
 server. Many other connectors have their own `*QueryRunner` class that you can
-use when working on a specific connector.
+use when working on a specific connector. The generally required VM option 
+here is `--add-modules jdk.incubator.vector` but various `*QueryRunner` classes
+might require additional options (if necessary, check the `air.test.jvm.additional-arguments` 
+property in the `pom.xml` file of the module from which the runner comes).
+
+### Running tests from the IDE
+
+When running individual test classes directly from IntelliJ, you need to
+configure the JUnit run configuration template. Go to Run/Debug Configurations >
+Edit Configuration Templates > JUnit > VM options and set the value to
+`-ea --add-modules=jdk.incubator.vector`.
 
 ### Running the full server
 
@@ -99,7 +109,7 @@ Trino comes with sample configuration that should work out-of-the-box for
 development. Use the following options to create a run configuration:
 
 * Main Class: `io.trino.server.DevelopmentServer`
-* VM Options: `-ea -Dconfig=etc/config.properties -Dlog.levels-file=etc/log.properties -Djdk.attach.allowAttachSelf=true --sun-misc-unsafe-memory-access=allow`
+* VM Options: `-ea -Dconfig=etc/config.properties -Dlog.levels-file=etc/log.properties -Djdk.attach.allowAttachSelf=true --sun-misc-unsafe-memory-access=allow --add-modules jdk.incubator.vector`
 * Working directory: `$MODULE_DIR$`
 * Use classpath of module: `trino-server-dev`
 
